Updates to align with the R8 SDK release.
- Removed google-services.json placholder files from examples that don't support push or google sign-in.
- Improved instructions on setting keystore properties.
- Other improvements to the examples.

Ref#712

--- a/SoftPhone/app/src/main/res/layout/activity_main.xml
+++ b/SoftPhone/app/src/main/res/layout/activity_main.xml
@@ -55,8 +55,15 @@
             android:id="@+id/my_reg_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textSize="18dp" />
+            android:padding="8dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/my_user_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textSize="18sp"/>
 
         <fragment
             android:id="@+id/call_history_fragment"
