--- a/Announcements/app/src/main/res/layout/activity_main.xml
+++ b/Announcements/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingTop="8dp"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/my_display_name"
@@ -56,7 +56,8 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingTop="8dp"
-            android:paddingBottom="8dp"/>
+            android:paddingBottom="8dp"
+            android:textSize="18sp"/>
 
         <FrameLayout
             android:id="@+id/fragmentContent"
