--- a/DataTransfer/app/src/main/res/layout/activity_main.xml
+++ b/DataTransfer/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,15 @@
             android:id="@+id/my_reg_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textSize="18dp" />
+            android:padding="8dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/my_user_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textSize="18sp"/>
 
 
         <TextView
@@ -45,6 +52,8 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:background="@color/disconnected_color"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="@string/connection_status"/>
 
         <TextView
@@ -53,6 +62,8 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:background="@color/disconnected_color"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:visibility="gone" />
 
         <Button
